--- a/styles/plone/Terms.yml
+++ b/styles/plone/Terms.yml
@@ -18,4 +18,5 @@ swap:
   easy: "'effortless','straightforward', 'uncomplicated', or 'manageable'"
   retina: "'HiDPI'"
   webserver: "'web server'"
+  styleguide: "'style guide'"
   # javascript: "'JavaScript'"
