--- a/vale.ini
+++ b/vale.ini
@@ -1,7 +1,7 @@
 # This goes in a file named either `.vale.ini` or `_vale.ini`.
 
-StylesPath = ../styles
-#StylesPath = styles
+#StylesPath = ../styles
+StylesPath = vale-styles
 MinAlertLevel = suggestion # suggestion, warning or error
 
 # Only Markdown and .txt files; change to whatever you're using.
