--- a/vale.ini
+++ b/vale.ini
@@ -34,3 +34,4 @@ plone.Quotes = suggestion
 plone.Hedging = suggestion
 plone.GenderBias = suggestion
 plone.So = suggestion
+plone.Link = suggestion
